--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>
-                  <div class="main-section-item">
+                  <div class="main-section-item main-section-item-remover">
                     <picture><img src="imagens/imagem-shounem7.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">Hinata Shoyo, um aluno do ensino médio que sonha em ser jogador de vôlei depois que assistiu a um campeonato pela televisão</p>
                     <div class="main-section-item-preco">
@@ -115,7 +115,7 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>
-                <div class="main-section-item">
+                <div class="main-section-item main-section-item-remover">
                     <picture><img src="imagens/imagem-shounem8.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">Um estudante universitário é atacado por um ghoul, um ser que se alimenta de carne humana</p>
                     <div class="main-section-item-preco">
@@ -183,7 +183,7 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>
-                  <div class="main-section-item">
+                  <div class="main-section-item main-section-item-remover">
                     <picture><img src="imagens/imagem-kodomo7.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">Mamoru Endo é um garoto cheio de energia e que adora futebol. Neto de Daisuke Endo, um dos melhores goleiros do Japão</p>
                     <div class="main-section-item-preco">
@@ -192,7 +192,7 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>
-                <div class="main-section-item">
+                <div class="main-section-item main-section-item-remover">
                     <picture><img src="imagens/imagem-kodomo8.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">Nas férias de verão, Ruka conhece Umi e Sora, dois meninos de origem estranha e misteriosa</p>
                     <div class="main-section-item-preco">
@@ -258,7 +258,7 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>
-                  <div class="main-section-item">
+                  <div class="main-section-item main-section-item-remover">
                     <picture><img src="imagens/imagem-shoujo7.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">Após um doloroso rompimento com sua namorada Mami Nanami, ele decide alugar uma namorada</p>
                     <div class="main-section-item-preco">
@@ -267,7 +267,7 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>
-                <div class="main-section-item">
+                <div class="main-section-item main-section-item-remover">
                     <picture><img src="imagens/imagem-shoujo8.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">A história gira em torno de Komi-san, uma linda e admirável garota que ninguém consegue tirar os olhoso</p>
                     <div class="main-section-item-preco">
@@ -324,7 +324,7 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>                              
-                <div class="main-section-item">
+                <div class="main-section-item main-section-item-remover">
                     <picture><img src="imagens/manga-isekai6.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">Um jogo de RPG de mundo aberto muito popular chamado Yggdrasil está prestes a fechar seu servidor</p>
                     <div class="main-section-item-preco">
@@ -333,7 +333,7 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>
-                  <div class="main-section-item">
+                  <div class="main-section-item main-section-item-remover">
                     <picture><img src="imagens/manga-isekai7.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">A série foca em Monkey D. Luffy,  um jovem feito de borracha, que se inspira em Shanks, o Ruivo</p>
                     <div class="main-section-item-preco">
@@ -353,11 +353,6 @@
                 </div>
             </section>
         </article>
-        <aside>
-            <h3>Cadastre-se</h3>
-            <label for="footer-icadastro">E-mail</label>
-            <input type="text" name="footer-cadastro" id="footer-icadastro" placeholder="insiraseuemail@email.com">
-        </aside>
     </main>
     <footer>
         <h3>Agradecimentos</h3>
