Pondo link na imagem

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
                 </div>
-                <div class="main-section-item">
+                <a href="file:///C:/Users/juanm/Documents/estudos/Meus%20desafios/desafio-produto-item/index.html" target="_blank" class="main-section-item">
                     <picture><img src="imagens/imagem-shounem-2.jpg" alt=""></picture>
-                    <p class="main-section-item-paragrafo">é sobre um estudante do ensino médio, Yuji Itadori, que engole o dedo de um demônio, e fica possuído</p>
+                    <p class="main-section-item-paragrafo">Hakari e Panda seguem para a Colônia 2 de Tokyo atrás de Kashimo, jogador que detém a maior pontuação, mas se separam durante a entrada na barreira. </p>
                     <div class="main-section-item-preco">
                         <p class="main-section-item-preco-anterior">De: <span>R$37,99</span></p> <br>
                         <p class="main-section-item-preco-novo">Por: R$32,99</p>
                     </div>
                     <div class="main-section-item-botao"><button >COMPRAR</button></div>
-                </div>
+                </a>
                 <div class="main-section-item">
                     <picture><img src="imagens/imagem-shounem3.jpg" alt=""></picture>
                     <p class="main-section-item-paragrafo">Um mundo onde quase todos possui poder sobre-humano, Izuku Midoriya é um dos poucos casos de pessoas comuns</p>
